# Anti-virus-em-Rust

./: Cargo.toml  README.md
quarentine/: readme.md
src/: main.rs
