[package]
name = "ant_virus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clamav-client = { version = "0.4.5", features = ["tokio-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
walkdir = "2.4.0"
env_logger = "0.11.2"
log = "0.4.20"
notify = "6.1.1"
futures = "0.3.30"
sysinfo = "0.30.5"
thirtyfour = "0.31.0"

[profile.release]
lto = true
incremental = true
target-cpu = "native"
opt-level = "z"
